# pecserke_cz

./: .gitignore  Cargo.toml  migration.sql  spin.toml
api/src/: lib.rs
src/: lib.rs
src/api/: mod.rs  payme.rs
src/pages/: index.rs  pages.rs
templates/: cv.html  index.html  qr.html  settings.html
