[package]
name = "api"
authors = ["Filip Pecsérke <filip.pecserke@gmail.com>"]
description = "API for my app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
askama = "0.12.1"
build_html = "2.4.0"
payment_strings = "0.1.1"
qr_from_str = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
spin-sdk = "2.2.0"

[workspace]
